--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,10 +18,17 @@ dependencies:
   firebase_storage: ^11.7.7
   firebase_auth: ^4.20.0
   cached_network_image: ^3.3.1
+  google_maps_flutter: ^2.5.3
+  geolocator: ^10.1.0
+  geocoding: ^2.1.1
+  flutter_svg: ^2.0.10
+  intl_phone_field: ^3.2.0
+  pin_code_fields: ^8.0.1
+  shared_preferences: ^2.2.2
   http: ^1.1.0
   flutter_localizations:
     sdk: flutter
-  intl: ^0.19.0
+  intl: ^0.20.2
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
 
