--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,14 +13,14 @@ dependencies:
   google_fonts: ^6.1.0
   smooth_page_indicator: 1.2.1
   photo_view: ^0.14.0
-  firebase_core: ^2.32.0
-  cloud_firestore: ^4.17.5
-  firebase_storage: ^11.7.7
-  firebase_auth: ^4.20.0
+  firebase_core: ^4.0.0
+  cloud_firestore: ^6.0.0
+  firebase_storage: ^13.0.0
+  firebase_auth: ^6.0.0
   cached_network_image: ^3.3.1
   google_maps_flutter: ^2.5.3
-  geolocator: ^10.1.0
-  geocoding: ^2.1.1
+  geolocator: ^14.0.2
+  geocoding: ^4.0.0
   flutter_svg: ^2.0.10
   intl_phone_field: ^3.2.0
   pin_code_fields: ^8.0.1
@@ -31,6 +31,11 @@ dependencies:
   intl: ^0.20.2
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
+  firebase_auth_platform_interface: ^8.0.0
+  flutter_staggered_grid_view: ^0.7.0
+  shimmer: ^3.0.0
+  url_launcher: ^6.3.2
+  share_plus: ^11.0.0
 
 dev_dependencies:
   flutter_test:
